feat: basic multi system

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -3,6 +3,7 @@
 [/Script/EngineSettings.GameMapsSettings]
 GameDefaultMap=/Engine/Maps/Templates/OpenWorld
 GlobalDefaultGameMode=/Game/General/MainGameModeBP.MainGameModeBP_C
+GameInstanceClass=/Script/MultiActionGame.MultiGameInstance
 
 [/Script/Engine.RendererSettings]
 r.AllowStaticLighting=False
