--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,9 +1,19 @@
 
 
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Engine/Maps/Templates/OpenWorld
-GlobalDefaultGameMode=/Game/General/MainGameModeBP.MainGameModeBP_C
+EditorStartupMap=/Engine/Maps/Templates/OpenWorld.OpenWorld
+LocalMapOptions=
+TransitionMap=None
+bUseSplitscreen=True
+TwoPlayerSplitscreenLayout=Horizontal
+ThreePlayerSplitscreenLayout=FavorTop
+FourPlayerSplitscreenLayout=Grid
+bOffsetPlayerGamepadIds=False
 GameInstanceClass=/Script/MultiActionGame.MultiGameInstance
+GameDefaultMap=/Engine/Maps/Templates/OpenWorld.OpenWorld
+ServerDefaultMap=/Engine/Maps/Entry.Entry
+GlobalDefaultGameMode=/Game/General/MainGameModeBP.MainGameModeBP_C
+GlobalDefaultServerGameMode=None
 
 [/Script/Engine.RendererSettings]
 r.AllowStaticLighting=False
