--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -108,6 +108,8 @@ bSkipMovies=False
 +IniSectionDenylist=HordeStorageServers
 +IniSectionDenylist=StorageServers
 +IniSectionDenylist=/Script/AndroidFileServerEditor.AndroidFileServerRuntimeSettings
++MapsToCook=(FilePath="/Game/MenuSystem/MainMenu")
++MapsToCook=(FilePath="/Game/TestMap")
 +DirectoriesToAlwaysCook=(Path="/NNEDenoiser")
 bRetainStagedDirectory=False
 CustomStageCopyHandler=
