Fix: resolve duplicate click bug

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,7 +1,7 @@
 
 
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/MenuSystem/MainMenu.MainMenu
+EditorStartupMap=/Game/TestMap.TestMap
 LocalMapOptions=
 TransitionMap=None
 bUseSplitscreen=True
