--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,3 @@
 Content/ParagonGrux/** filter=lfs diff=lfs merge=lfs -text
 "Content/MWLandscapeAutoMaterial/**" filter=lfs diff=lfs merge=lfs -text
+"Content/LavaMat/**" filter=lfs diff=lfs merge=lfs -text
